Add user push and privacy preference APIs
